<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/digital"
    android:columnCount="8"
  android:background="@xml/background"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <ImageView 
        android:layout_width="wrap_content"
        android:id="@+id/pos1"
        android:contentDescription="@string/HoursPosition1"
         android:layout_weight="1"
        android:layout_height="match_parent" >
    </ImageView>
      <ImageView 
          android:layout_width="wrap_content"
        android:id="@+id/pos2"
        android:contentDescription="@string/HoursPosition2"
         android:layout_weight="1"
        android:layout_height="match_parent" >
    </ImageView>
    <TextView  android:layout_width="wrap_content"  android:layout_height="match_parent" android:gravity="fill" android:textColor="@color/text_color"  android:text = "@string/separator_string"  />
     
    
      <ImageView 
          android:layout_width="wrap_content"
        android:id="@+id/pos3"
        android:contentDescription="@string/MinutesPosition1"
          android:layout_weight="1"
        android:layout_height="match_parent" >
    </ImageView>
      <ImageView 
          android:layout_width="wrap_content"
        android:id="@+id/pos4"
        android:contentDescription="@string/MinutesPosition2"
      android:layout_weight="1"
        android:layout_height="match_parent" >
    </ImageView>
       <TextView  android:layout_width="wrap_content"  android:layout_height="match_parent" android:gravity="fill"  android:textColor="@color/text_color"  android:text = "@string/separator_string"  />
    
      <ImageView 
          android:layout_width="wrap_content"
        android:id="@+id/pos5"
        android:contentDescription="@string/SecondsPosition1" 
        android:layout_weight="1"
        android:layout_height="match_parent" >
    </ImageView>
      <ImageView 
          android:layout_width="wrap_content"
        android:id="@+id/pos6"
        android:contentDescription="@string/SecondsPosition2"
       android:layout_weight="1"
        android:layout_height="match_parent" >
    </ImageView>
  
    
    
</LinearLayout>

